# nasal

./: .gitignore  CMakeLists.txt  NasalEmesaryInterface.cxx  README.md  SPECIFICATION.md  code.c  codegen.c  lex.c  lib.c  naref.h  nasal-bin.c  nasal.h  parse.c  parse.h  string.c
docs/: SPECIFICATION.md
doxygen/: Doxyfile  nasal-internals.md
examples/: boolean_values.nas  closures.nas  first_class_functions.nas  ghosts.nas  implicit_semicolon_insertion.nas  lexical_scoping.nas  lexperf.nas  local_and_global_variables.nas  parentheses_and_function_declarations.nas  string_mutability_and_concatenation.nas
misc/: localvar.nas  nasal-mode.el
src/: CMakeLists.txt  code.c  code.h  codegen.c  data.h  debug.c  debug.h  gc.c  hash.c  lex.c  lib.c  mathlib.c  misc.c  nasal-bin.c  nasal.h  parse.h  string.c  util.h  vector.c
